Closed Bug 451692 Opened 18 years ago Closed 18 years ago

updater.exe debug exception - dbgheap.c Line 1279 _CrtlsValidHeapPointer(pUserData)

Categories

(Toolkit :: Application Update, defect)

x86
Windows Vista
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)

References

Details

(Keywords: regression)

Attachments

(1 file)

Assignee: nobody → robert.bugzilla
Status: NEW → ASSIGNED
Attachment #335023 - Flags: review?(benjamin)
Summary: Debug exception - dbgheap.c Line 1279 _CrtlsValidHeapPointer(pUserData) → updater.exe debug exception - dbgheap.c Line 1279 _CrtlsValidHeapPointer(pUserData)
Attachment #335023 - Flags: review?(benjamin) → review+
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Blocks: songbird
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: