Bug 451692 - updater.exe debug exception - dbgheap.c Line 1279 _CrtlsValidHeapPointer(pUserData). r=bsmedberg